# AutomataCI

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONFIG.toml  README.md  SECURITY.md  ci.cmd
artworks/: logo-1200x630.avif
automata/: build_unix-any.sh  build_windows-any.cmd  build_windows-any.ps1  compose_unix-any.sh  compose_windows-any.cmd  package_unix-any.sh  package_windows-any.cmd  package_windows-any.ps1  prepare_unix-any.sh  prepare_windows-any.cmd  prepare_windows-any.ps1  publish_unix-any.sh  publish_windows-any.cmd  publish_windows-any.ps1  release_unix-any.sh  release_windows-any.cmd  setup_unix-any.sh  setup_windows-any.cmd  setup_windows-any.ps1  start_unix-any.sh  start_windows-any.cmd  start_windows-any.ps1  stop_windows-any.cmd  stop_windows-any.ps1  test_unix-any.sh  (+2 more)
srcRUST/: Cargo.toml  lib.rs  main.rs
srcRUST/.ci/: _package-archive_unix-any.sh  _package-archive_windows-any.ps1  _package-cargo_unix-any.sh  _package-cargo_windows-any.ps1  _package-chocolatey_unix-any.sh  _package-chocolatey_windows-any.ps1  _package-docker_unix-any.sh  _package-docker_windows-any.ps1  _package-homebrew_unix-any.sh  _package-homebrew_windows-any.ps1  build_unix-any.sh  build_windows-any.ps1  materialize_unix-any.sh  materialize_windows-any.ps1  package_unix-any.sh  package_windows-any.ps1  prepare_unix-any.sh  prepare_windows-any.ps1  setup_unix-any.sh  setup_windows-any.ps1  start_unix-any.sh  start_windows-any.ps1  stop_unix-any.sh  test_unix-any.sh  test_windows-any.ps1
srcRUST/sample/: entity.rs  greeter.rs  greeter_test.rs  location.rs  mod.rs
(+953 files in other folders)
